Refresh the react server on current page

--- a/gems/quilt_rails/app/views/quilt/ui/react_render_error.html
+++ b/gems/quilt_rails/app/views/quilt/ui/react_render_error.html
@@ -3,7 +3,7 @@
 <head>
   <title>React Render Error</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta http-equiv="refresh" content="3;URL='/'" />
+  <meta http-equiv="refresh" content="3" />
   <link rel="stylesheet" href="https://unpkg.com/@shopify/polaris@5.1.0/dist/styles.css" />
 </head>
 <body>
