Implements local server for storybook tests

--- a/packages/storybook-a11y-test/stories/button.css
+++ b/packages/storybook-a11y-test/stories/button.css
@@ -9,12 +9,12 @@
 }
 .storybook-button--primary {
   color: white;
-  background-color: #1ea7fd;
+  background-color: black;
 }
 .storybook-button--secondary {
-  color: #333;
-  background-color: transparent;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
+  /* This should fail accessbility checks */
+  color: white;
+  background-color: #1ea7fd;
 }
 .storybook-button--small {
   font-size: 12px;
